micro-services/deployment/istio/ingress-deployment.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: movies-gateway
spec:
  selector:
    istio: ingressgateway
  servers:
  - port:
      number: 80
      name: http
      protocol: http
    hosts:
    - "*"
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: moveis
spec:
  hosts:
  - "*"
  gateways:
  - movies-gateway
  http:
  - match:
    - uri:
        exact: /movie-details
    route:
    - destination:
        host: movie-details
        port:
          number: 80
